# dictato

./: .gitignore  CLAUDE.md  README.md  bun.lockb  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
.kiro/specs/fix-auto-paste-macos/: design.md  requirements.md  tasks.md
.kiro/specs/local-llm/: design.md
.kiro/specs/local-whisper/: design.md
public/: audio-processor.js
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  groq.rs  keyboard_lock.rs  lib.rs  llm.rs  main.rs  parakeet.rs  realtime.rs  transcribe.rs  whisper.rs
src/components/: AddModeDialog.tsx  AddRuleDialog.tsx  CleaningOverlay.tsx  FloatingWindow.css  FloatingWindow.tsx  IconPicker.tsx  RuleItem.tsx  RulesSection.tsx  Settings.css  Settings.tsx  UpdateDialog.tsx
src/components/layout/: AppLayout.tsx  SectionLayout.tsx  Sidebar.tsx  SidebarItem.tsx
src/components/sections/: CleaningModeSection.tsx  DictionarySection.tsx  GeneralSection.tsx  HistorySection.tsx  RecordingSection.tsx  RulesSection.tsx  TranscribeSection.tsx
src/components/transcribe/: DependencyCheck.tsx  FileDropZone.tsx  TranscriptionHistory.tsx  TranscriptionResult.tsx  YouTubeInput.tsx
src/components/ui/: ComingSoonBadge.tsx  alert-dialog.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  icons.tsx  input.tsx  (+5 more)
src/hooks/: useAudioRecorder.ts  useNavigation.ts  useRealtimeTranscription.ts  useSettings.ts  useStats.ts  useTranscribe.ts  useTranscriptionHistory.ts  useUpdateCheck.ts
src/lib/: constants.ts  formatters.ts  modes.ts  promptGenerator.ts  shortcuts.ts  storeKeys.ts
src/types/: navigation.ts
