[package]
name = "dictato"
version = "0.1.0"
description = "Dictato - Voice transcription app"
authors = ["you"]
edition = "2021"

[lib]
name = "dictato_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
enigo = "0.6.1"
reqwest = { version = "0.11", features = ["multipart", "json"] }
cpal = "0.15"
rubato = "0.15"
tempfile = "3"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
regex = "1"
once_cell = "1"
